--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -6,35 +6,35 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 @misc{ RING,
   author       = {Ring},
   howpublished = {https://en-uk.ring.com/},
-  title        = {Ring Homepage},
+  title        = {{Ring} {Homepage}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ EUFY,
   author       = {Eufy},
   howpublished = {https://uk.eufylife.com/},
-  title        = {Eufy Homepage},
+  title        = {{Eufy} {Homepage}},
   year         = {Retrieved March 2022}
 }
 
 @article{ SEAL,
   author          = {Kim Laine},
   journal         = {Microsoft Research TechReport},
-  title           = {Simple Encrypted Arithmetic Library 2.3.1},
+  title           = {{Simple} {Encrypted} {Arithmetic} {Library} 2.3.1},
   year            = {2017}
 }
 
 @article{ CKKS,
   author          = {Jung Hee Cheon and Andrey Kim and Miran Kim and Yongsoo Song},
   journal         = {Lecture Notes in Computer Science},
-  title           = {Homomorphic Encryption for Arithmetic of Approximate Numbers},
+  title           = {{Homomorphic} {Encryption} for {Arithmetic} of {Approximate} {Numbers}},
   year            = {2016}
 }
 
 @article{ BootstrappingHEAAN,
   author          = {Jung Hee Cheon and Kyoohyung Han and Andrey Kim and Miran Kim and Yongsoo Song},
   journal         = {Advances in Cryptology},
-  title           = {Bootstrapping for Approximate Homomorphic Encryption},
+  title           = {{Bootstrapping} {for} {Approximate} {Homomorphic} {Encryption}},
   year            = {2018}
 }
 
@@ -55,91 +55,91 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 @article{ Graepel,
   author          = {Thore Graepel and Kristin Lauter and Michael Naehrig},
   journal         = {The International Conference on Information Security and Cryptology},
-  title           = {ML Confidential: Machine Learning on Encrypted Data},
+  title           = {{ML} {Confidential}: {Machine} {Learning} on {Encrypted} {Data}},
   year            = {2012}
 }
 
 @article{ Dowlin,
   author          = {Nathan Dowlin and Ran Gilad-Bachrach and Kim Laine and Kristin Lauter and Michael Naehrig and John Wernsing},
   journal         = {ICML},
-  title           = {CryptoNets: Applying Neural Networks to Encrypted Data with High Throughput and Accuracy},
+  title           = {{CryptoNets}: {Applying} {Neural} {Networks} to {Encrypted} {Data} with {High} {Throughput} and {Accuracy}},
   year            = {2016}
 }
 
 @article{ Pathak,
   author          = {Manas A. Pathak and Bhiksha Raj},
   journal         = {IEEE},
-  title           = {Privacy-Preserving Speaker Verification and Identification Using Gaussian Mixture Models},
+  title           = {{Privacy}-{Preserving} {Speaker} {Verification} and {Identification} {Using} {Gaussian} {Mixture} {Models}},
   year            = {2013}
 }
 
 @article{ Bae,
   author          = {Ho Bae and Jaehee Jang and Dahuin Jung and Hyemi Jang and Heonseok Ha and Hyungyu Lee and Sungroh Yoon},
   journal         = {Journal of IEEE Transactions on Arificial Intelligence},
-  title           = {Security and Privacy Issues in Deep Learning},
+  title           = {{Security} and {Privacy} {Issues} in {Deep} {Learning}},
   year            = {2018}
 }
 
 @article{ TLS,
   author          = {Steven Turner},
   journal         = {IEEE Internet Security},
-  title           = {Transport Layer Security},
+  title           = {{Transport} {Layer} {Security}},
   year            = {2014}
 }
 
 @article{ PartialSchemes,
   author          = {Payal V. Parmar and Shraddha B. Padhar and Shafika N. Patel and Niyatee I. Bhatt and Rutvij H. Jhaveri},
   journal         = {International Journal of Computer Applications},
-  title           = {Survey of Various Homomorphic Encryption Algorithms and Schemes},
+  title           = {{Survey} of {Various} {Homomorphic} {Encryption} {Algorithms} and {Schemes}},
   year            = {2014}
 }
 
 @article{ OTP,
   author          = {Ioannis Tzemos and Apostolos P. Fournaris and Nicolas Sklavos},
   journal         = {20th Pan-Hellenic Conference on Informatics},
-  title           = {Security and Efficiency Analysis of One Time Password Techniques},
+  title           = {{Security} and {Efficiency} {Analysis} of {One} {Time} {Password} {Techniques}},
   year            = {2016}
 }
 
 @article{ RLWE,
   author          = {Vadim Lyubashevsky and Chris Peikert and Oded Regev},
   journal         = {Journal of the ACM},
-  title           = {On Ideal Lattices and Learning with Errors over Rings},
+  title           = {{On} {Ideal} {Lattices} and {Learning} with {Errors} over {Rings}},
   year            = {2010}
 }
 
 @article{ Hardware,
   author          = {Sangpyo Kim and Wonkyung Jung and Jaiyoung Park and Jung Ho Ahn},
   journal         = {2020 IEEE International Symposium on Workload Characterization},
-  title           = {Accelerating Number Theoretic Transformations for Bootstrappable Homomorphic Encryption on GPUs},
+  title           = {{Accelerating} {Number} {Theoretic} {Transformations} for {Bootstrappable} {Homomorphic} {Encryption} on {GPU}s},
   year            = {2020}
 }
 
 @article{ HEStandard,
   author          = {Martin Albrecht and Melissa Chase and Hao Chen and Jintai Ding and Shafi Goldwasser and Sergey Gorbunov and Shai Halevi and Jeffrey Hoffstein and Kim Laine and Kristin Lauter and Satya Lokam and Daniele Micciancio and Dustin Moody and Travis Morrison and Amit Sahai and Vinod Vaikuntanathan},
   journal         = {Protecting Privacy through Homomorphic Encryption},
-  title           = {Homomorphic Encryption Standard},
+  title           = {{Homomorphic} {Encryption} {Standard}},
   year            = {2022}
 }
 
 @article{ NTT,
   author          = {M. Bhattacharya and R. Creutzburg and J. Astola},
   journal         = {International TICSP Workshop on Spectral Methods and Multirate Signal Processing},
-  title           = {Some historical notes on Number Theoretic transform},
+  title           = {Some historical notes on {Number} {Theoretic} {Transform}},
   year            = {2004}
 }
 
 @book{ Shapiro,
   author         = {Linda G. Shapiro and George C. Stockman},
   publisher      = {Pearson},
-  title          = {Computer Vision},
+  title          = {{Computer} {Vision}},
   year           = {2001}
 }
 
 @article{ Semantic,
   author          = {Dazhou Guo and Yanting Pei and Kang Zheng and Hongkai Yu and Yuhang Lu and Song Wang},
   journal         = {IEEE Transactions on Geoscience and Remote Sensing},
-  title           = {Degraded Image Semantic Segmentation With Dense-Gram Networks},
+  title           = {{Degraded} {Image} {Semantic} {Segmentation} with {Dense}-{Gram} {Networks}},
   year            = {2021}
 }
 
@@ -174,217 +174,217 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 @misc{ BrilliantHE,
   author       = {Brilliant.org},
   howpublished = {https://brilliant.org/wiki/homomorphic-encryption/},
-  title        = {Homomorphic Encryption},
+  title        = {{Homomorphic} {Encryption}},
   year         = {Retrieved March 2022}
 }
 
 @article{ Kulchandani,
   author          = {Jaya S. Kulchandani and Kruti J. Dangarwala},
   journal         = {2015 International Conference on Pervasive Computing (ICPC)},
-  title           = {Moving object detection: Review of recent research trends},
+  title           = {{Moving} object detection: {Review} of recent research trends},
   year            = {2015}
 }
 
 @misc{ Python,
   author       = {Python Software Foundation},
   howpublished = {https://www.python.org/},
-  title        = {Python},
+  title        = {{Python}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ VSCode,
   author       = {Microsoft},
   howpublished = {https://code.visualstudio.com/},
-  title        = {Visual Studio Code},
+  title        = {{Visual} {Studio} {Code}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ Git,
   author       = {Git},
   howpublished = {https://git-scm.com/},
-  title        = {Git},
+  title        = {{Git}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ Github,
   author       = {Github Inc.},
   howpublished = {https://github.com/},
-  title        = {Github},
+  title        = {{Github}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ OneDrive,
   author       = {Microsoft},
   howpublished = {https://www.microsoft.com/en-gb/microsoft-365/onedrive/online-cloud-storage},
-  title        = {OneDrive Personal Cloud Storage},
+  title        = {{OneDrive} {Personal} {Cloud} {Storage}},
   year         = {Retrieved March 2022}
 }
 
 @article{ BFV1,
   author          = {Zvika Brakerski},
   journal         = {Annual Cryptology Conference},
-  title           = {Fully Homomorphic Encryption without Modulus Switching from Classical GapSVP},
+  title           = {{Fully} {Homomorphic} {Encryption} without {Modulus} {Switching} from {Classical} {GapSVP}},
   year            = {2012}
 }
 
 @article{ BFV2,
   author          = {Junfeng Fan and Frederik Vercauteren},
   journal         = {Cryptology ePrint Archive},
-  title           = {Somewhat Practical Fully Homomorphic Encryption},
+  title           = {{Somewhat} {Practical} {Fully} {Homomorphic} {Encryption}},
   year            = {2012}
 }
 
 @misc{ Wrapper,
   author       = {Huelse},
   howpublished = {https://github.com/Huelse/SEAL-Python},
-  title        = {SEAL-Python},
+  title        = {{SEAL}-{Python}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ MovingMNIST,
   author       = {Nitish Srivastava and Elman Mansimov and Ruslan Salakhutdinov},
   howpublished = {https://www.cs.toronto.edu/~nitish/unsupervised\_video/},
-  title        = {Unsupervised Learning of Video Representations using LSTMs},
+  title        = {{Unsupervised} {Learning} of {Video} {Representations} using {LSTM}s},
   year         = {Retrieved March 2022}
 }
 
 @misc{ MNIST,
   author       = {Yann LeCun and Corinna Cortes and Christopher J.C. Burges},
   howpublished = {http://yann.lecun.com/exdb/mnist/},
-  title        = {The MNIST Database of Handwritten Digits},
+  title        = {{The} {MNIST} {Database} of {Handwritten} {Digits}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ LASIESTA,
   author       = {Grupo de Tratamiento de Im\'agenes},
   howpublished = {https://www.gti.ssr.upm.es/data/lasiesta\_database},
-  title        = {Labeled and Annotated Sequences for Integral Evaluation of SegmenTation Algorithms},
+  title        = {{Labeled} and {Annotated} {Sequences} for {Integral} {Evaluation} of {SegmenTation} {Algorithms}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ BSD,
   author       = {Open Source Initiative},
   howpublished = {https://opensource.org/licenses/BSD-3-Clause},
-  title        = {The 3-Clause BSD License},
+  title        = {{The} 3-{Clause} {BSD} {License}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ MIT,
   author       = {Open Source Initiative},
   howpublished = {https://opensource.org/licenses/MIT},
-  title        = {The MIT License},
+  title        = {{The} {MIT} {License}},
   year         = {Retrieved March 2022}
 }
 
 @misc{ PSFL,
   author       = {Python Software Foundation},
   howpublished = {https://docs.python.org/3/license.html\#psf-license},
-  title        = {PSF LICENSE AGREEMENT FOR PYTHON 3.10.4},
+  title        = {{PSF} {LICENSE} {AGREEMENT} {FOR} {PYTHON} 3.10.4},
   year         = {Retrieved March 2022}
 }
 
 @article{ RNS,
   author          = {Jung Hee Cheon and Kyoohyung Han and Andrey Kim and Miran Kim and Yongsoo Song},
   journal         = {International Conference on Selected Areas in Cryptography},
-  title           = {A Full RNS Variant of Approximate Homomorphic Encryption},
+  title           = {{A} {Full} {RNS} {Variant} of {Approximate} {Homomorphic} {Encryption}},
   year            = {2019}
 }
 
 @article{ RAE,
   author          = {Andrey Kim and Antonis Papadimitriou and Yuriy Polyakov},
   journal         = {Topics in Cryptology - CT-RSA},
-  title           = {Approximate Homomorphic Encryption with Reduced Approximation Error},
+  title           = {{Approximate} {Homomorphic} {Encryption} with {Reduced} {Approximation} {Error}},
   year            = {2020}
 }
 
 @article{ RotationBad,
   author          = {Chiraag Juvekar and inod Vaikuntanathan and Anantha Chandrakasan},
   journal         = {Proceedings of the 27th USENIX Conference on Security Symposium},
-  title           = {Gazelle: A Low Latency Framework for Secure Neural Network Inference},
+  title           = {{Gazelle}: {A} {Low} {Latency} {Framework} for {Secure} {Neural} {Network} {Inference}},
   year            = {2018}
 }
 
 @article{ Paterson,
   author          = {Mike Paterson and Larry J. Stockmeyer},
   journal         = {SIAM Journal on Computing},
-  title           = {On the Number of Nonscalar Multiplications Necessary to Evaluate Polynomials},
+  title           = {{On} the {Number} of {Nonscalar} {Multiplications} {Necessary} to {Evaluate} {Polynomials}},
   year            = {1973}
 }
 
 @article{ Badawi,
   author          = {Ahmad Al Badawi and Jin Chao and Jie Lin and Chan Fook Mun and Jun Jie Sim and Benjamin Hong Meng Tan and Xiao Nan and Khin Mi Mi Aung and Vijay Ramaseshan Chandrasekhar},
   journal         = {IEEE Transactions on Emerging Topics in Computing},
-  title           = {Towards the AlexNet Moment for Homomorphic Encryption: HCNN, theFirst Homomorphic CNN on Encrypted Data with GPUs},
+  title           = {{Towards} the {AlexNet} {Moment} for {Homomorphic} {Encryption}: {HCNN}, the {First} {Homomorphic} {CNN} on {Encrypted} {Data} with {GPU}s},
   year            = {2020}
 }
 
 @article{ Makkaoui,
   author          = {Khalid El Makkaoui and Abdellah Ezzati and Abderrahim Beni Hssane},
   journal         = {International Conference on Cloud Technologies and Applications },
-  title           = {Challenges of Using Homomorphic Encryption to Secure Cloud Computing},
+  title           = {{Challenges} of {Using} {Homomorphic} {Encryption} to {Secure} {Cloud} {Computing}},
   year            = {2015}
 }
 
 @article{ SeamCarving,
   author          = {Shai Avidan and Ariel Shamir},
   journal         = {ACM Transactions on Graphics},
-  title           = {Seam Carving for Content-Aware Image Resizing},
+  title           = {{Seam} {Carving} for {Content}-{Aware} {Image} {Resizing}},
   year            = {2007}
 }
 
 @article{ Saliency,
   author          = {Karen Simonyan and Andrea Vedaldi and Andrew Zisserman},
   journal         = {arXiv:1312.6034},
-  title           = {Deep Inside Convolutional Networks: Visualising Image Classification Models and Saliency Maps},
+  title           = {{Deep} {Inside} {Convolutional} {Networks}: {Visualising} {Image} {Classification} {Models} and {Saliency} {Maps}},
   year            = {2014}
 }
 
 @article{ Viola,
   author          = {Paul Viola andMichael Jeffrey Jones},
   journal         = {Conference on Computer Vision and Pattern Recognition,},
-  title           = {Rapid Object Detection using a Boosted Cascade of Simple Features},
+  title           = {{Rapid} {Object} {Detection} using a {Boosted} {Cascade} of {Simple} {Features}},
   year            = {2001}
 }
 
 @article{ Itti,
   author          = {Laurent Itti Christof Koch and Ernst Niebur},
   journal         = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-  title           = {A Model of Saliency-based Visual Attention for Rapid Scene Analysis},
+  title           = {{A} {Model} of {Saliency}-based {Visual} {Attention} for {Rapid} {Scene} {Analysis}},
   year            = {1998}
 }
 
 @article{ Rubinstein,
   author          = {Michael Rubinstein and Ariel Shamir and Shai Avidan},
   journal         = {The ACM SIGGRAPH conference proceedings},
-  title           = {Improved Seam Carving for Video Retargeting},
+  title           = {{Improved} {Seam} {Carving} for {Video} {Retargeting}},
   year            = {2008}
 }
 
 @article{ Duarte,
   author          = {Ronald Duarte and Resit Sendag},
   journal         = {Proceedings of the 18th Annual International Conference on Parallel and Distributed Processing Techniques and Application},
-  title           = {Accelerating and Characterizing Seam Carving Using a Heterogeneous CPU-GPU System},
+  title           = {{Accelerating} and {Characterizing} {Seam} {Carving} {Using} a {Heterogeneous} {CPU}-{GPU} {System}},
   year            = {2012}
 }
 
 @misc{ wikiSeamCarving,
   author       = {Wikipedia user Newton2},
   howpublished = {https://en.wikipedia.org/wiki/Seam\_carving},
-  title        = {Seam Carving},
+  title        = {{Seam} {Carving}},
   year         = {Retreived March 2020}
 }
 
 @phdthesis{ Foveal,
   author      = {Leo John Grady},
   school      = {Boston University},
-  title       = {Space-variant computer vision: A graph-theoretic approach},
+  title       = {{Space}-variant computer vision: {A} graph-theoretic approach},
   year        = {2004}
 }
 
 @article{ Watershed,
   author          = {Serge Beucher and Christian Lantuéjoul},
   journal         = {International workshop on image processing, real-time edge and motion detection},
-  title           = {Use of Watersheds in Contour Detection},
+  title           = {{Use} of {Watersheds} in {Contour} {Detection}},
   year            = {1979}
 }
 
@@ -405,35 +405,35 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 @article{ Dennard,
   author          = {Greg Yeric},
   journal         = {International Electron Devices Meeting},
-  title           = {Moore's law at 50: Are we planning for retirement?},
+  title           = {{Moore}'s law at 50: {Are} we planning for retirement?},
   year            = {2015}
 }
 
 @misc{ ParallelismVsConcurrency,
   author       = {Rob Pike},
   howpublished = {Waza Conference (Slides:\\https://talks.golang.org/2012/waza.slide\#1)},
-  title        = {Concurrency is not Parallelism},
+  title        = {{Concurrency} is not {Parallelism}},
   year         = {2012}
 }
 
 @article{ Dempster,
   author          = {A. P. Dempster and N. M. Laird and D. B. Rubin},
   journal         = {Journal of the Royal Statistical Society},
-  title           = {Maximum Likelihood from Incomplete Data Via the EM Algorithm},
+  title           = {{Maximum} {Likelihood} from {Incomplete} {Data} via the {EM} {Algorithm}},
   year            = {1977}
 }
 
 @article{ HillClimbing,
   author          = {Sheldon H. Jacobson and Enver Yücesan},
   journal         = {Journal of Heuristics},
-  title           = {Analyzing the Performance of Generalized Hill Climbing Algorithms},
+  title           = {{Analyzing} the {Performance} of {Generalized} {Hill} {Climbing} {Algorithms}},
   year            = {2004}
 }
 
 @article{ Comparison,
   author          = {Jung Hee Cheon and Dongwoo Kim and Duhyeong Kim and Hun hee Lee and Keewoo Lee},
   journal         = {International Conference on the Theory and Application of Cryptology and Information Security},
-  title           = {Numerical Method for Comparison on Homomorphically Encrypted Numbers},
+  title           = {{Numerical} {Method} for {Comparison} on {Homomorphically} {Encrypted} {Numbers}},
   year            = {2019}
 }
 
@@ -447,6 +447,27 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 @article{ MeanFilter,
   author          = {Ruolin Zhang and Jian Ding},
   journal         = {Procedia Engineering},
-  title           = {Object Tracking and Detecting Based on Adaptive Background Subtraction},
+  title           = {{Object} {Tracking} and {Detecting} {Based} on {Adaptive} {Background} {Subtraction}},
+  year            = {2012}
+}
+
+@article{ OSI,
+  author          = {John D. Day and Hubert Zimmermann},
+  journal         = {Proceedings of the IEEE},
+  title           = {{The} {OSI} {Reference} {Model}},
+  year            = {1983}
+}
+
+@article{ Lorch,
+  author          = {Markus Lorch and Jim Basney and Dennis Kafura},
+  journal         = {IEEE International Symposium on Cluster Computing and the Grid},
+  title           = {A hardware-secured credential repository for {Grid} {PKI}s},
+  year            = {2004}
+}
+
+@article{ Boneh,
+  author          = {Dan Boneh and Amit Sahai and Brent Waters},
+  journal         = {Communications of the ACM},
+  title           = {Functional encryption: a new vision for public-key cryptography},
   year            = {2012}
 }
