--- a/figures/filetree.tex
+++ b/figures/filetree.tex
@@ -1,6 +1,6 @@
-\DTsetlength{1em}{1em}{0.1em}{0.4pt}{0.4pt}       
+\DTsetlength{1em}{1em}{0.1em}{0.4pt}{2pt}       
 
-\setlength{\DTbaselineskip}{12pt}  % minimum size for \footnotesize 
+\setlength{\DTbaselineskip}{15pt}  % minimum size for \footnotesize 
 \renewcommand{\DTstyle}{\rmfamily\footnotesize}
 
 \dirtree{%
@@ -49,10 +49,10 @@
     .5 evaluator.py                         \DTcomment{\textit{Methods for evaluating HE circuits.}}.
     .5 key\_generator.py                    \DTcomment{\textit{Methods for encryption keys.}}.
     .5 keys.py                              \DTcomment{\textit{Classes for public and private keys.}}.
-    .5 number\_theoretical\_transform.py    \DTcomment{\textit{Methods for the NTT.}}.
+    .5 number\_theoretic\_transform.py      \DTcomment{\textit{Methods for the NTT.}}.
     .5 paramters.py                         \DTcomment{\textit{Class for parameters objects.}}.
     .5 polynomial.py                        \DTcomment{\textit{Class for polynomial objects.}}.
-    .5 test.py                              \DTcomment{\textit{Unit tests for MeKKS library}}.
+    .5 test.py                              \DTcomment{\textit{Unit tests for MeKKS library.}}.
     .5 utils.py                             \DTcomment{\textit{Helper functions.}}.
     .3 evaluation                           \DTcomment{\textit{Scripts used to collect and analyse data for evaluation.}}.
     .2 results                              \DTcomment{\textit{Output of application.}}.
