--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1,12 +1,15 @@
 % Template for a Computer Science Tripos Part II project dissertation
+\PassOptionsToPackage{dvipsnames}{xcolor}
 \documentclass[12pt,a4paper]{report}
 \usepackage[pdfborder={0 0 0}]{hyperref}    % turns references into hyperlinks
 \usepackage[margin=20mm]{geometry}  % adjusts page layout
 \usepackage{graphicx}  % allows inclusion of PDF, PNG and JPG images
 \usepackage{verbatim}
 \usepackage{docmute}
+\usepackage[export]{adjustbox}
 
 \usepackage{subcaption}
+\usepackage{caption}
 \usepackage{multirow}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -18,6 +21,7 @@
 \usepackage{array}
 \usepackage{siunitx}
 \usepackage{pdfpages}
+\usepackage[compact]{titlesec}  
 
 \usepackage[inline]{enumitem}
 
@@ -71,6 +75,7 @@
 	Friday 13\textsuperscript{th} May, 2022
 \end{center}
 
+\pagenumbering{roman}
 
 \include{originality}
 \include{proforma}
@@ -79,11 +84,14 @@
 \listoffigures
 \listoftables
 
+\pagebreak
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%% MAIN  MATTER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pagestyle{headings}
+\pagenumbering{arabic}
+\setcounter{page}{1}
 
 \include{Introduction} 
 \include{Preparation}
@@ -100,8 +108,7 @@
 
 \appendix
 \include{homomorphicEncryption}
-\include{seamCarving}
-\include{lasiesta}
+\include{networking}
 \include{proposal}
 
 \end{document}
