--- a/proforma.tex
+++ b/proforma.tex
@@ -6,41 +6,33 @@
 \begin{tabular}{ll}
 Candidate Number:   & \bf 2418D                                      \\
 Project Title:      & \bf Privacy-Preserving Moving Object Detection \\
-Examination:        & \bf Computer Science Trupos -- Part II, 2022   \\
-Word Count:         & \bf ???\footnotemark[1]                        \\
-Code line Count:    & \bf ???                                        \\
-Project Originator: & Stephen Cummins and 2418D                      \\
-Supervisor:         & Stephen Cummins and Francisco Vargas Palomo    \\ 
+Examination:        & \bf Computer Science Tripos -- Part II, 2022   \\
+Word Count:         & \bf 12,000\footnotemark[1]                        \\
+Code line Count:    & \bf 6,322                                       \\
+Project Originator: & Dr. Stephen Cummins and 2418D                      \\
+Supervisor:         & Dr. Stephen Cummins and Francisco Vargas Palomo    \\ 
 \end{tabular}
 }
 \footnotetext[1]{Counted with \texttt{TeXcount}.}
 \stepcounter{footnote}
 
 \section*{Original Project Aims}
-\setlength{\leftskip}{0.25cm}
 \indent \indent
 An increasing number of smart-home devices are being developed to provide surveillance solutions for customers. While these devices have proved successful in improving the security of people's homes, they introduce new unprecedented privacy risks. This project aimed to investigate homomorphic encryption as a solution to privacy concerns without detracting from the security benefits. To this end, it intended to use existing homomorphic encryption libraries to implement privacy-preserving unsupervised machine learning algorithms that can extract moving objects from surveillance footage. As extensions, the project would implement a bespoke encryption algorithm, investigate further inference algorithms, and validate the security of such algorithms.
-
-\setlength{\leftskip}{0cm}
 
 
 
 
 
 \section*{Work Completed}
-\setlength{\leftskip}{0.25cm}
 \indent \indent
-Overall, the project was a success. It fulfilled all core success criteria and obtained significant results from inference algorithms and in the optimisations applied to improve performance. Furthermore, the project was extended by implementing a bespoke homomorphic encryption scheme, furthering understanding and providing opportunities for specialisation optimisations. Security of encryption schemes was considered during the preparation stage before implementation, but a formal proof was not completed due to time constraints. Similarly, extending with object recognition was dismissed to provide a more thorough investigation of moving object detection algorithms.
-
-\setlength{\leftskip}{0cm}
+All core requirements of this project were fulfilled. A client-server application was designed and implemented to emulate the machine learning as a service business model, and an investigation into optimising data transmission was performed. Moreover, an investigation and evaluation of moving-object detection inference algorithms in the homomorphic encryption domain was completed, highlighting the limitations of privacy-preserving machine learning. Furthermore, as an extension, a bespoke homomorphic encryption scheme was implemented to further understanding and investigate potential optimisations through specialisation.
 
 
-
+\pagebreak
 
 
 \section*{Special Difficulties}
-\setlength{\leftskip}{0.25cm}
 \indent \indent
 The majority of the project was completed with relatively few unexpected disruptions. However, contracting COVID-19 in December resulted in the project falling several weeks behind schedule. Consequently, significant extra work had to be done to get back on track and ensure the project was completed before the deadline. 
 
-\setlength{\leftskip}{0cm}
